03_output/logs/master_processing_250727_21%e%f.log
  File "C:\Users\carucci_r\OneDrive - City of Hackensack\01_DataSources\SCRPA_Time_v2\01_scripts\master_scrpa_processor.py", line 1
    *** Begin Patch: master_scrpa_processor.py ***
    ^^
SyntaxError: invalid syntax
